# TerminalGame

./: .clang-format  .gitignore  README.md  format_code.sh  meson.build  run_with_valgrind.sh
resources/documentation/: ability_table_doc.md  gear_table_doc.md
resources/game_data/ability/: ability_table.csv
resources/game_data/gear/: gear_table.csv
resources/local/: local_de.properties  local_en.properties
ressources/documentation/: ability_table_doc.md
ressources/game_data/ability/: ability_table.csv
ressources/local/: local_de.properties  local_de.txt  local_en.properties  local_en.txt
save_files/: save_file_1.sav  save_file_3.sav
src/: game.c  game.h  main.c
src/console/: console.h
src/cstd/collections/: array_list.c  array_list.h  list.h
src/data_types/cache/: string_cache.c  string_cache.h
src/game_data/: save_file_handler.c  save_file_handler.h
src/game_data/ability/: ability.c  ability.h  ability_index.h
src/game_data/character/: character.c  character.h  character_parser.c  character_parser.h  character_save_handler.c  character_save_handler.h  enemy_generator.c  enemy_generator.h  enemy_id.h  goblin.h  stats.h
src/game_data/inventory/: inventory.c  inventory.h
src/game_data/item/: gear.c  gear.h  item.h
src/game_data/map/: map.c  map.h  map_generator.c  map_generator.h  map_parser.c  map_parser.h  map_populator.c  map_populator.h  map_revealer.c  map_revealer.h
src/game_mechanics/: ability_usage.c  ability_usage.h  leveling.c  leveling.h  luck.c  luck.h
src/game_mechanics/dice/: dice.c  dice.h
src/game_modes/character/: character_creation_mode.c  character_creation_mode.h  character_mode.c  character_mode.h  lvl_up_mode.c  lvl_up_mode.h
src/game_modes/combat/: combat_mode.c  combat_mode.h
src/game_modes/inventory/: inventory_mode.c  inventory_mode.h
src/game_modes/map/: map.h  map_event_handler.c  map_event_handler.h  map_generator.c  map_generator.h  map_mode.c  map_mode.h
src/game_modes/menu/: menu_mode.c  menu_mode.h
src/game_modes/menus/: change_language_mode.c  change_language_mode.h  language_menu_mode.c  language_menu_mode.h  load_game_mode.c  load_game_mode.h  main_menu_mode.c  main_menu_mode.h  save_game_mode.c  save_game_mode.h  title_screen_mode.c  title_screen_mode.h
src/helper/: string_helper.c  string_helper.h
src/io/: colors.h  menu.c  menu.h  string_formats.h
src/io/input/: input_handler.c  input_handler.h
src/io/local/: local_handler.c  local_handler.h
src/io/output/: output.c  output.h
src/io/output/common/: common_output.c  common_output.h
src/io/output/specific/: character_output.c  character_output.h  map_output.c  map_output.h
src/logger/: logger.c  logger.h  logger_config.h  ringbuffer.c  ringbuffer.h
src/memory/: mem_mgmt.c  mem_mgmt.h
src/termbox2/: termbox2.h
src/thread/: thread_handler.c  thread_handler.h
test/: meson.build
test/cstd/collections/: array_list_test.c
test/helper/: string_helper_test.c
