test('string_helper_test', executable('string_helper_test',
                                      'helper/string_helper_test.c',
                                      '../src/helper/string_helper.c'))

test('array_list_test', executable('array_list_test',
                                   'cstd/collections/array_list_test.c',
                                   '../src/cstd/collections/array_list.c'))